<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCollection</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_screen">ListScreenActivity</string>
    <string name="numberone">Number One</string>
    <string name="numbertwo">Number Two</string>
    <string name="title_activity_addition_screen">AdditionScreenActivity</string>
    <string name="btnadd">+</string>
    <string name="btnsub">-</string>
    <string name="btnback">Back</string>
    <string name="results">Results:</string>
    <string name="title_activity_increment_screen">IncrementScreenActivity</string>
    <string name="user">Enter Number</string>
    <string name="btnincre">Increament</string>
    <string name="btndencre">Decreament</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="name">User Name</string>
    <string name="password">Password</string>
    <string name="chkpassword">Show Password</string>
    <string name="btntoast">Toast</string>
    <string name="title_activity_toast_screen">ToastScreenActivity</string>
    <string name="title_activity_country_screen">CountryScreenActivity</string>

    <string-array name="country">
        <item>Kenya</item>
        <item>Uganda</item>
        <item>Tanzania</item>
        <item>Somalia</item>
        <item>Sudan</item>
        <item>Nigeria</item>
        <item>Algeria</item>
        <item>Brazil</item>
        <item>Germany</item>
        <item>Argentina</item>
        <item>Ethiopia</item>
    </string-array>

    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
<string name="username">clare</string>
<string name="phonenumber">0713748998</string>
</resources>
